# RedEye-Engine-Gateway

./: .env.example  .gitignore  Cargo.toml  Makefile  Promt_temp.md  README.md  Uninstall nexus_dashboardNexusAI.lnk  cargo.toml  dev.bat  dev.sh  docker-compose.yml  payload.json  seed.json  task.txt  trace_test.json
.github/workflows/: cd.yml  ci.yml  playwright.yml
.windsurf/plans/: fix-cors-credentials-815560.md  gateway-cookie-auth-815560.md  standardize-re-token-cookie-815560.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  openapi.yaml  requests.http
infra/clickhouse/: config.xml  init.sql
infra/postgres/: init.sql
nexus_dashboard/: index.html  package-lock.json  package.json
nexus_dashboard/src/: App.tsx  index.css
nexus_dashboard/src-tauri/: tauri.conf.json
nexus_gateway/: Cargo.toml  logs.txt
nexus_gateway/src/: handlers.rs  main.rs  routes.rs
nexus_gateway/src/middleware/: mod.rs  rate_limit.rs
proto/: semantic_cache.proto
redeye_auth/: Cargo.toml  Dockerfile
redeye_auth/migrations/: 20260320000000_init_auth.sql  20260321000000_update_llm_routes.sql  20260325000000_add_is_active_to_api_keys.sql  20260325000001_create_refresh_tokens_table.sql  20260328000000_hybrid_auth.sql  20260404000000_virtual_api_key_phase1.sql  20260408000000_drop_provider_name_check.sql  20260501000000_dynamic_provider_keys.sql  20260501000001_add_weight_to_provider_keys.sql
redeye_auth/src/: error.rs  lib.rs  main.rs
redeye_auth/src/api/: handlers.rs  mod.rs  router.rs
redeye_auth/src/api/middleware/: auth.rs
redeye_auth/src/domain/: mod.rs  models.rs
redeye_auth/src/infrastructure/: db.rs  llm_validator.rs  mod.rs  redis.rs  security.rs
redeye_auth/src/usecases/: mod.rs
redeye_auth/tests/: integration_test.rs
redeye_cache/: Cargo.toml  build.rs  errors.txt  logs.txt
redeye_cache/migrations/: 001_resize_embedding_to_384.sql
redeye_cache/src/: main.rs
redeye_cache/src/api/: grpc_server.rs  handlers.rs  mod.rs
redeye_cache/src/domain/: models.rs
redeye_cache/src/infrastructure/: local_embedder.rs  mod.rs  openai_client.rs  postgres_repo.rs  redis_repo.rs
redeye_cache/src/usecases/: mod.rs  semantic_search.rs
redeye_compliance/: Cargo.toml
redeye_compliance/fuzz/: .gitignore  Cargo.toml
redeye_compliance/fuzz/corpus/pii_fuzzer/: seed_01_clean.json  seed_02_ssn.json  seed_03_aadhaar.json  seed_04_nested.json  seed_05_unicode.json
redeye_compliance/fuzz/fuzz_targets/: json_depth_fuzzer.rs  pii_fuzzer.rs  regex_fuzzer.rs
redeye_compliance/src/: error.rs  lib.rs  main.rs
redeye_compliance/src/api/: handlers.rs  mod.rs  routes.rs
redeye_compliance/src/api/middleware/: geo_routing.rs  mod.rs  security.rs
redeye_compliance/src/domain/: models.rs
redeye_compliance/src/infrastructure/: clickhouse.rs
redeye_compliance/src/usecases/: mod.rs  opa_client.rs  pii_engine.rs
redeye_compliance/tests/: integration_test.rs
redeye_config/: Cargo.toml
redeye_config/migrations/: 20260421000000_init_config.sql  20260501000001_create_llm_models.sql  20260501000002_fix_llm_models_schema.sql
redeye_config/src/: error.rs  lib.rs  main.rs
redeye_config/src/api/: handlers.rs  router.rs
redeye_config/src/domain/: models.rs
redeye_config/src/infrastructure/: crypto.rs  db.rs  mod.rs  redis_sync.rs
redeye_dashboard/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts  vitest.setup.ts
redeye_dashboard/e2e/: core-platform.spec.ts
redeye_dashboard/src/: App.css  App.tsx  index.css
redeye_dashboard/src-tauri/: tauri.conf.json
redeye_dashboard/src/data/constants/: providers.ts
redeye_dashboard/src/data/repositories/: mockData.ts
redeye_dashboard/src/data/services/: authService.ts  configService.ts  metricsService.ts
redeye_dashboard/src/data/utils/: apiErrors.ts
redeye_dashboard/src/domain/entities/: Config.ts  User.ts
redeye_dashboard/src/domain/usecases/: AuthUseCase.ts
redeye_dashboard/src/presentation/components/: TutorialOverlay.tsx
redeye_dashboard/src/presentation/components/ui/: AreaChartGradient.tsx  Badge.test.tsx  Badge.tsx  BentoCard.tsx  (+13 more)
redeye_dashboard/src/presentation/context/: AuthContext.tsx  IncidentContext.tsx
redeye_dashboard/src/presentation/dashboard/: ApiKeysView.test.tsx  ApiKeysView.tsx  BillingView.tsx  CacheView.tsx  ComplianceView.test.tsx  ComplianceView.tsx  DashboardView.tsx  HotSwapLiveChart.test.tsx  HotSwapLiveChart.tsx  ProfileView.tsx  SecurityView.tsx  SettingsView.tsx  TracesView.test.tsx  TracesView.tsx
redeye_dashboard/src/presentation/hooks/: useTheme.ts  useToast.ts
redeye_dashboard/src/presentation/layouts/: DashboardLayout.tsx
redeye_dashboard/src/presentation/pages/: AuthPage.tsx  LandingPage.tsx  OAuthCallback.tsx  OnboardingWizard.tsx
redeye_dashboard/src/test/: setup.ts
redeye_dashboard/tests/: apikeys.spec.ts  auth.spec.ts  telemetry.spec.ts
redeye_dashboard/tests/pages/: AuthPage.ts
redeye_gateway/: Cargo.toml  Dockerfile  build.rs
redeye_gateway/examples/: stress_test.rs
redeye_gateway/src/: error.rs  lib.rs  main.rs
redeye_gateway/src/api/: handlers.rs  mod.rs  routes.rs
redeye_gateway/src/api/middleware/: auth.rs  mod.rs  rate_limit.rs  trace_context.rs
redeye_gateway/src/domain/: compliance.rs  models.rs
redeye_gateway/src/infrastructure/: cache_client.rs  clickhouse_logger.rs  config_subscriber.rs  l1_cache.rs  llm_router.rs  mcp_client.rs  mcp_registry.rs  mod.rs  openai_client.rs  routing_strategy.rs  schema_mapper.rs  translators.rs
redeye_gateway/src/usecases/: agentic_tracker.rs  behavior_guard.rs  mod.rs  proxy.rs  tool_router.rs
redeye_gateway/tests/: api_integration_test.rs  chaos_test.rs  integration_redis.rs  load_test.js
redeye_tracer/: Cargo.toml
redeye_tracer/src/: error.rs  lib.rs  main.rs
redeye_tracer/src/api/: handlers.rs
redeye_tracer/src/domain/: models.rs
redeye_tracer/src/infrastructure/: clickhouse_repo.rs  latency_worker.rs  mod.rs
redeye_tracer/src/usecases/: ingest.rs  query.rs
redeye_tracer/tests/: integration_test.rs
scripts/: setup.sh
(+6 files in other folders)
