[package]
name = "redeye_cache"
version = "0.1.0"
edition = "2024"
resolver = "2"

members = [
    "redeye_gateway",
    "redeye_cache",
    "redeye_tracer",
    "redeye_compliance",
]
[dependencies]
axum = "0.8.8"
pgvector = { version = "0.3", features = ["postgres", "sqlx"] }
redis = { version = "1.0.5", features = ["tokio-comp", "json", "aio"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.7.4", features = ["postgres", "uuid", "runtime-tokio-native-tls", "macros"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.22.0", features = ["v4"] }
