[package]
name = "redeye_cache"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
dotenvy = "0.15"
redis = { version = "0.27", features = ["tokio-comp", "script"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.22.0", features = ["v4"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid"] }
pgvector = { version = "0.3", features = ["sqlx"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# ── gRPC Server ───────────────────────────────────────────────────────
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
