[package]
name = "redeye_compliance"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4"] }
tower-http = { version = "0.6.0", features = ["cors"] }
regex = "1.10.0"
aho-corasick = "1.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres", "redis"] }
wiremock = "0.6"
