[package]
name = "redeye_config"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "redeye_config"
path = "src/main.rs"

# See more keys at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ── Web Framework ──────────────────────────────────────────────────────────────
# axum 0.7 with macros feature for #[debug_handler] diagnostics.
axum  = { version = "0.7", features = ["macros"] }
tokio = { version = "1",   features = ["full"] }

# ── Serialization ──────────────────────────────────────────────────────────────
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ── Database ───────────────────────────────────────────────────────────────────
# sqlx 0.7 with compile-time-checked queries, Postgres driver, UUID + Chrono support.
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }

# ── Redis / Pub-Sub ────────────────────────────────────────────────────────────
# redis-rs with the Tokio async connection multiplexer.
redis = { version = "0.27", features = ["tokio-comp"] }

# ── Error Handling ─────────────────────────────────────────────────────────────
# thiserror derives std::error::Error cleanly for custom error enums.
thiserror = "1"

# ── Identifiers & Time ─────────────────────────────────────────────────────────
uuid   = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# ── Environment ────────────────────────────────────────────────────────────────
dotenvy = "0.15"

# ── Structured Logging ─────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── HTTP Middleware ────────────────────────────────────────────────────────────
http       = "1"
tower-http = { version = "0.5", features = ["cors"] }

# ── Async Trait Objects ────────────────────────────────────────────────────────
# async-trait enables `dyn Trait` for async methods — required for DI + mocking.
async-trait = "0.1"

# ── Cryptography ───────────────────────────────────────────────────────────────
# AES-256-GCM decryption — matches the encryption used by redeye_auth.
# Must use the same version as redeye_auth to guarantee wire-format compatibility.
aes-gcm = "0.10"

[dev-dependencies]
# ── Test Utilities ─────────────────────────────────────────────────────────────
tower          = { version = "0.5", features = ["util"] }  # ServiceExt::oneshot
http-body-util = "0.1"                                      # BodyExt::collect
mockall        = "0.12"                                     # Automatic mock generation
