[package]
name = "redeye_gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ── Web Framework ──────────────────────────────────────────────────────────────
# axum: Tokio-native, ergonomic HTTP framework built on top of hyper.
# Chosen over Actix-web for its first-class tower middleware & async streams.
axum = { version = "0.7", features = ["json"] }

# ── Async Runtime ──────────────────────────────────────────────────────────────
# tokio: The de-facto async runtime for Rust.
# "full" enables all features: I/O, timers, macros, multi-thread scheduler.
tokio = { version = "1", features = ["full"] }

# ── HTTP Client ────────────────────────────────────────────────────────────────
# reqwest: Ergonomic async HTTP client built on hyper.
# Used to forward requests upstream to OpenAI/Anthropic.
# "json" feature enables automatic serde serialization of request/response bodies.
# "stream" enables streaming response bodies back to the client.
reqwest = { version = "0.12", features = ["json", "stream"] }

# ── Serialization ──────────────────────────────────────────────────────────────
# serde + serde_json: Industry-standard serialization framework.
# "derive" macro generates Serialize/Deserialize implementations automatically.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Environment Variables ──────────────────────────────────────────────────────
# dotenvy: Modern, maintained fork of dotenv. Loads .env at runtime.
dotenvy = "0.15"

# ── Structured Logging ────────────────────────────────────────────────────────
# tracing: Zero-cost structured, async-aware diagnostics for Rust.
# tracing-subscriber: Formats and outputs trace events (console, JSON, etc.)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Error Handling ────────────────────────────────────────────────────────────
# thiserror: Derives std::error::Error cleanly for custom error enums.
# Avoids boilerplate; idiomatic Rust error design.
thiserror = "1"

# ── Redis ─────────────────────────────────────────────────────────────────────
# redis: The canonical async Redis client for Rust.
# "tokio-comp" activates the async Tokio connection backend.
# "script" enables the Script API for executing Lua scripts atomically.
redis = { version = "0.27", features = ["tokio-comp", "script"] }

# deadpool-redis: Async connection pool for Redis.
# Reuses existing connections across requests — critical for sub-5ms latency.
# Without a pool, each request would pay ~1ms for a TCP handshake to Redis.
deadpool-redis = "0.18"

# ── HTTP Primitives ────────────────────────────────────────────────────────────
# http: Shared types for HTTP (StatusCode, HeaderMap, etc.) used across crates.
http = "1"

# ── Async Stream Utilities ────────────────────────────────────────────────────
# tokio-stream: Adapters for working with async streams (reqwest response body).
tokio-stream = "0.1"
uuid = { version = "1.22.0", features = ["v4"] }
tower-http = { version = "0.6.8", features = ["cors"] }
